# py-once

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_once/: __init__.py
tests/: test_import.py  test_once.py
