[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-once"
version = "0.1.4"
description = "Ensure a function runs only once, regardless of how many times it's called"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["once", "singleton", "cache", "decorator", "run-once"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-once"
Repository = "https://github.com/philiprehberger/py-once"
Issues = "https://github.com/philiprehberger/py-once/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_once"]
